--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "library",
     "multi-media-choice"
   ],
-  "author": "Joubel",
+  "author": "Joubel AS <contact@joubel.com> (https://joubel.com)",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/h5p/h5p-multi-media-choice/issues"
+  },
+  "homepage": "https://github.com/h5p/h5p-multi-media-choice#readme",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
