--- a/package.json
+++ b/package.json
@@ -30,10 +30,17 @@
     "@babel/preset-env": "^7.14.5",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "editorconfig": "^0.15.3",
     "eslint": "^7.28.0",
     "mini-css-extract-plugin": "^1.6.0",
     "regenerator-runtime": "^0.13.7",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "remove": "^0.1.5"
   }
 }
