--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,9 +3,10 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "editorconfig.editorconfig",
-        "tevencl.adddoccomments",
+        "stevencl.adddoccomments",
         "naumovs.color-highlight",
         "eamodio.gitlens",
+        "coenraads.bracket-pair-colorizer-2",
         "gruntfuggly.todo-tree"
     ]
 }
