--- a/package.json
+++ b/package.json
@@ -28,19 +28,18 @@
     "@babel/core": "^7.14.6",
     "@babel/plugin-transform-destructuring": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "editorconfig": "^0.15.3",
     "eslint": "^7.28.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "prettier-eslint-cli": "^5.0.1",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
-    "remove": "^0.1.5"
   }
 }
