--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "sass-loader": "^12.1.0",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "masonry-layout": "^4.2.2"
   }
 }
