--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack",
-    "watch": "./node_modules/.bin/webpack --watch"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "build": "cross-env NODE_ENV=production webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -24,23 +25,23 @@
   },
   "homepage": "https://github.com/h5p/h5p-multi-media-choice#readme",
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-transform-destructuring": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-transform-destructuring": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.6",
+    "css-loader": "^6.7.1",
     "editorconfig": "^0.15.3",
-    "eslint": "^7.28.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "prettier-eslint-cli": "^5.0.1",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
+    "eslint": "^8.18.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "prettier-eslint-cli": "^6.0.1",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "masonry-layout": "^4.2.2"
