--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -30,11 +31,13 @@
     "@babel/eslint-parser": "^7.24.1",
     "@babel/plugin-transform-destructuring": "^7.24.1",
     "@babel/preset-env": "^7.24.3",
+    "@eslint/js": "^9.5.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "editorconfig": "^2.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "mini-css-extract-plugin": "^2.8.1",
     "prettier-eslint-cli": "^8.0.1",
     "regenerator-runtime": "^0.14.1",
